b=31451 Made sure we only set the NS_FRAME_OUT_OF_FLOW frame state bit if the frame is actually out of the flow